# LaboratorioDiProgrammazioneEs13

./: CMakeLists.txt  Collection.cpp  Collection.h  ImportantNotesCollection.cpp  ImportantNotesCollection.h  ImportantNotesCollectionView.cpp  ImportantNotesCollectionView.h  Note.cpp  Note.h  NotesCollection.cpp  NotesCollection.h  NotesCollectionView.cpp  NotesCollectionView.h  Observer.cpp  Observer.h  README.md  SpecificNotesCollection.cpp  SpecificNotesCollection.h  SpecificNotesCollectionView.cpp  SpecificNotesCollectionView.h  Subject.cpp  Subject.h  main.cpp
Test/: ImportantNotesCollectionTest.cpp  ImportantNotesCollectionViewTest.cpp  NoteTest.cpp  NotesCollectionTest.cpp  NotesCollectionViewTest.cpp  SpecificNotesCollectionTest.cpp  SpecificNotesCollectionViewTest.cpp  runAllTests.cpp
Test/lib/: runAllTests.cpp
